# ChangeLog for app-text/poppler
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.185 2008/12/17 19:30:04 loki_val Exp $

  17 Dec 2008; Peter Alfredsen <loki_val@gentoo.org> metadata.xml:
  Adding myself as maintainer, I've been de-facto maintainer for six months
  anyway.

*poppler-0.10.2 (10 Dec 2008)

  10 Dec 2008; Peter Alfredsen <loki_val@gentoo.org> +poppler-0.10.2.ebuild:
  Bumb

  07 Dec 2008; Mike Frysinger <vapier@gentoo.org> poppler-0.10.0.ebuild,
  poppler-0.10.1.ebuild:
  Add back s390 #240520.

  24 Nov 2008; Brent Baude <ranger@gentoo.org> poppler-0.8.7.ebuild:
  Marking poppler-0.8.7 ppc64 for bug 239414

*poppler-0.10.1 (09 Nov 2008)

  09 Nov 2008; Peter Alfredsen <loki_val@gentoo.org> +poppler-0.10.1.ebuild:
  bump

  01 Nov 2008; Peter Alfredsen <loki_val@gentoo.org>
  -poppler-0.6.1-r1.ebuild:
  Cleanup of GLSA-affected ebuild.

  25 Oct 2008; Raúl Porcel <armin76@gentoo.org> poppler-0.10.0.ebuild:
  Add ~ia64 wrt #240520

  14 Oct 2008; Jeroen Roovers <jer@gentoo.org> poppler-0.10.0.ebuild:
  Marked ~hppa (bug #240520).

*poppler-0.10.0 (12 Oct 2008)

  12 Oct 2008; Peter Alfredsen <loki_val@gentoo.org> -poppler-0.9.3.ebuild,
  +poppler-0.10.0.ebuild:
  Bump. Watch for API breakage. ABI is broke for sure, remember rebuild.

  08 Oct 2008; Raúl Porcel <armin76@gentoo.org> poppler-0.8.7.ebuild:
  alpha/ia64 stable wrt #239414

*poppler-0.9.3 (08 Oct 2008)

  08 Oct 2008; Peter Alfredsen <loki_val@gentoo.org> -poppler-0.8.5.ebuild,
  -poppler-0.9.2.ebuild, +poppler-0.9.3.ebuild:
  Bump. Dropping jpeg and zlib useflags because they only control whether to
  use the internal implementation or the shared lib. Dropping cjk useflag
  because all it does is pull in a data-package. Go EAPI-2. Drop la files
  and static archives, not used. Dropping keywords for arm hppa ia64 m68k
  mips s390 sh sparc-fbsd cause they don't have openjpeg keyworded.
