@@ -1,15 +1,11 @@
 AUX poppler-0.6.1-xpdf-3.02pl2.patch 17438 RMD160 c8a4bd0eda87f94b183fe0d0aa6d8864f3f9c569 SHA1 fc17401fea3cbe73687cce9ddb9185018fdb859e SHA256 5c6fd90b752f3f40a3d3e9d63fdc5ac0220841a88a05f5551054edd78f1f0f9d
 AUX poppler-0.8.3-interix.patch 411 RMD160 82fb9ee10a0026714f6d4d9da3693edce3530357 SHA1 f2c193eb9f3e868a29c58fce619cb417659c353e SHA256 9c31b9fa2f4ded2878690920a0893d8bad7148bc1c10c731fcf8322f07f26e9a
 AUX poppler-0.8.3-page-init.patch 400 RMD160 9e2a4aa31e862996d7227084a46357c8fdd7a299 SHA1 edb7be8791b0e19119714c68f60cc3bf1cb6446d SHA256 9a44ccad42dcb2644713921c9e3dac2b757e54a81d313653345e176b6a36a158
-DIST poppler-0.10.0.tar.gz 1525340 RMD160 068a4f895e39635b628f0a21f4420bbf162ebeca SHA1 811b73557b68f7dd64cec4fec0bdd8a3e741d558 SHA256 32033ca71ac0f8569d25547fbbc3603ddb2738b332b5c7f2e1954108b92ab71a
-DIST poppler-0.10.1.tar.gz 1526091 RMD160 ca1137bfa2bbd8f750ad4511bcac50fdc1f1e7a3 SHA1 a0367b5c942c8ff15d8364923b3bbe4dca624b29 SHA256 9109963571dfa6e1b938d7a84b0f670f5c43852eb5ac799f9c229202d141eafb
-DIST poppler-0.10.2.tar.gz 1527730 RMD160 5157486d79b218c7183ad281694ee27f3782812a SHA1 a410ad5fcc036f18024be28ff55411ee62fefa40 SHA256 047726058e5e638a19b2bc47ac91999407326563bf631cb65891b89ab98a3299
+DIST poppler-0.10.3.tar.gz 1530394 RMD160 f3c70686d130c784543719aefbe600e85fda2e33 SHA1 04e4d132fedf7f4633ed3438f9da9a580d985811 SHA256 5290ba7cbcdd3f61b2c8431c1f2e789f0091ceb91acafdd547d2fab34e30301e
 DIST poppler-0.6.3.tar.gz 1292971 RMD160 f2971c6c5f717ec529b76e593f2c2a09ce81e53e SHA1 10bdce5eb8a4ed831fd047389bcbb34b7939f502 SHA256 32112064cb310933ea820b8ca3fd64bcfa951243901aca9b6a0a11994d19a66e
 DIST poppler-0.8.7.tar.gz 1469587 RMD160 ea03cdf88a432e5748988e3576110a2989aa79ec SHA1 01247676ee74b78b86b76169503910f30d6c86c1 SHA256 3f96dee17eecf16cfd3cae711819f07b42fcc512c3151cc8b911b19ccecf22f7
-EBUILD poppler-0.10.0.ebuild 1514 RMD160 b7e7c6e7f3c5d2f8189b78cdbbb3839707a26b37 SHA1 a6bd309fc5a86c21c12517845845da2be35f88d9 SHA256 8677492854b119c274e0c47d7736789a3f0dc531e231878c2b2f2e1f02bca8ab
-EBUILD poppler-0.10.1.ebuild 1514 RMD160 f10868890692f19c3726bebd841102fbeae62faf SHA1 50e37bce9fe749b3ed5f913463a431b4b2fb6f09 SHA256 7b5e04cb22ca85535455876412cae49d0f45f108978ab58f4c24488c28187916
-EBUILD poppler-0.10.2.ebuild 1516 RMD160 3e313e624cb15681482ab972db05b28ea12739b1 SHA1 1bf157aca7af20f396053546bc94482929bd8ebb SHA256 2f549dd2f0b855d3d253796b893de466db48dec5dc00363b627ce804d0925a88
+EBUILD poppler-0.10.3.ebuild 1516 RMD160 6ec78ad96bb63261b5bfc76a9951894aa86d0408 SHA1 1888c00f9f7e89b0c76edda47f71c77d066d13f2 SHA256 c375cd0ff4d913cccad1562e7c0fc4e943db3014fe21b8880c570b1d77a93f00
 EBUILD poppler-0.6.3-r1.ebuild 1284 RMD160 3da85f401dd6578dc2d9f88e042643187a91d27f SHA1 f6bae8ffc0add0845894a68584d26c68fc081c33 SHA256 6bf5b37e12a37b6e8beb58431d3658826cf3adabe20eb1587f6644172b4bfd9f
 EBUILD poppler-0.8.7.ebuild 1399 RMD160 2bba2304a071c316c2352963efc9ab16d121d6ba SHA1 14380fdffce17a4e059aaf23befdd35f2015726c SHA256 65b7c94626d87d8f2e5d700d3f12a2f7f0bc48bcdfb6f16631b6ca8139c06e2c
-MISC ChangeLog 25402 RMD160 395763122013c4ee2f37682cd6e20c228fafd314 SHA1 e6fddbb51cac15ce56868729a639615369821bc2 SHA256 afe1069e6491bb9e5454ca4fa325b450703e242dfd527ba43592bcbd2978cfb1
+MISC ChangeLog 25592 RMD160 30e637f491b9e7fdccfb47367f2d51af7d2de2ea SHA1 3496fa39b399e7556cff222ab1f6f2ba710008ee SHA256 0137d1b4c59940e74f5fc7af9759678a58022c80e0d05c7a2ef6978c707d7c55
 MISC metadata.xml 254 RMD160 e2af7df96e23f1a8f34c041859efe8d5b23ac7f0 SHA1 6d81483a9e1e502e7ee60b758f8136cc61a4af8e SHA256 14288b420c7d20adb5f3c4d70b643d0b9436e3aaadcbbdea199b119480b1e617
