@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/poppler-0.10.1.ebuild,v 1.2 2008/12/07 18:03:51 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/poppler-0.10.3.ebuild,v 1.1 2009/01/10 22:32:23 loki_val Exp $
 
 EAPI="prefix 2"
 
